compiler/testData/checkerWithErrorTypes/quick/backingField/ReadInFunction.jet
class ReadByAnotherPropertyInitializer() {
    val a = 1
    fun ff() = <!UNRESOLVED_REFERENCE!>$a<!>
}
